--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Feliz Cumpleaños Puercaaaaaa</title>
+  <title>¡Feliz Cumpleaños Puercaaaaaa!</title>
   <style>
     body, html { margin: 0; padding: 0; overflow: hidden; background: #111; }
     canvas { display: block; }
