--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>¡Feliz Cumpleaños Puercaaaaaa!</title>
+  <title>Feliz Cumpleaños Señora</title>
   <style>
     body, html { margin: 0; padding: 0; overflow: hidden; background: #111; }
     canvas { display: block; }
@@ -36,7 +36,7 @@
     finalImage.src = "https://png.pngtree.com/png-vector/20250128/ourmid/pngtree-red-wheelchair-for-mobility-and-accessibility-clipart-illustration-png-image_15352637.png"; // Reemplaza esta URL por la imagen final que desees
 
     var opts = {
-      strings: [ 'FELIZ', 'CUMPLE','LUCERO♥'],
+      strings: [ 'FELIZ', 'CUMPLEAÑOS','☺CAREN♥'],
       charSize: 30,
       charSpacing: 35,
       lineHeight: 40,
